<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#07487C"
    tools:context=".view.ApiCepFragment">

    <!-- Terceiro Passo -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtcep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1">

            <com.vicmikhailau.maskededittext.MaskedEditText
                android:id="@+id/editcep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_cep"
                android:inputType="number"
                app:mask="#####-###"
                android:textColor="#ffff" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnbuscacep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginStart="16dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="16dp"
            android:text="@string/btn_busca_cep" />

        <TextView
            android:id="@+id/responseTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_horizontal"
            android:text="@string/txt_cep_resultado"
            android:textColor="#ffff"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>


</FrameLayout>
