<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ApiTableFipeFragment">


    <!-- Terceiro Passo -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/rgTipoVeiculo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rdMotos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="motos" />

                <RadioButton
                    android:id="@+id/rdCarros"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="carros" />

                <RadioButton
                    android:id="@+id/rdCaminhoes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="caminhoes" />

            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtTextSearchMarca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/editTextSearchMarca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_veiculo_marca"
                    android:inputType="text"
                    android:textColor="#ffff" />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/spinnerVeiculoMarca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtTextSearchModelo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/editTextSearchModelo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_veiculo_modelo"
                    android:inputType="text"
                    android:textColor="#ffff" />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/spinnerVeiculoModelo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/darker_gray" />

            <Spinner
                android:id="@+id/spinnerVeiculoModeloAno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnTipoVeiculo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginStart="16dp"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="16dp"
                android:text="@string/btn_buscar_tipo_veiculo" />


            <TextView
                android:id="@+id/txtResultadoTipoVeiculo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:gravity="center_horizontal"
                android:text="@string/txt_resultado"
                android:textColor="#ffff"
                android:textSize="22sp"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>
